--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "vue": "^3.5.18"
   },
   "dependencies": {
-    "reka-ui": "^2.4.1"
+    "lodash-es": "^4.17.21",
+    "reka-ui": "^2.4.1",
+    "vue-i18n": "^11.1.11"
   }
 }
